refactor: upgrade GradleMutator to v3.0 with improved regex-based version parsing, standardized indentation, and new diagnostic graph and test automation scripts.